--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12813947379" class="contact-link">+1 (281) 394-7379</a>
+              <a href="tel:+18325789725" class="contact-link">+1 (832) 578-9725</a>
             </div>
 
           </li>
@@ -216,9 +216,7 @@
 
           <p>
             As I embark on my professional journey, I look forward to leveraging my academic foundation, technical 
-            expertise, and passion for innovation to make a meaningful impact in the realms of networks, cloud, and 
-            beyond. Join me as we explore the limitless possibilities of technology, one secure and scalable solution 
-            at a time.
+            expertise, and passion for innovation to make a meaningful impact for businesses and clients.
           </p>
         </section>
 
@@ -241,10 +239,14 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Network design</h4>
+                <h4 class="h4 service-item-title">Network Administration</h4>
 
                 <p class="service-item-text">
-                  Professional-grade network solutions with a specialty in Cisco products.
+                  I work part-time as a  Network Engineer for A&M's 
+                  Texas Cyber Range. As such, I am well-versed in topics such as 
+                  the OSI model, subnetting, and Linux (Bash, Powershell).
+                  At work, I mostly set up virtual machines and work with Cisco servers and Palo 
+                  Alto firewalls. Outside of work, I am studying for my CCNA.
                 </p>
               </div>
 
@@ -260,7 +262,10 @@
                 <h4 class="h4 service-item-title">Database Design</h4>
 
                 <p class="service-item-text">
-                  High-quality development of databases using ER Diagrams and Relational Schemas.
+                  In my classes, I have worked on ER Diagrams and Relational Schemas that have turned into 
+                  complete database solutions. The project I am most proud of is a simple application 
+                  from class which had an SQL database and a GUI that used C# and ASP.NET.
+                  I've also done some data mining with Tableau and PowerBI, so I have working knowledge of R as well.
                 </p>
               </div>
 
@@ -273,16 +278,21 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Responsive Web Development</h4>
+                <h4 class="h4 service-item-title">Basic Front-End Coding</h4>
 
                 <p class="service-item-text">
-                  Modern development of websites using various frameworks.
+                  Since I do a lot of back-end work, I wanted to understand how everything fit together. 
+                  That is why I built this website.
+                  For this website, I set up a Linux EC2 instance (AWS) and downloaded a LAMP
+                  stack onto it to create a web server.  Then, I
+                  used that web server to host this portfolio website! For the front-end part, I cloned a template from github and edited it
+                  to fit my needs. In the future, I will have a project where I build the front-end from scratch.
                 </p>
               </div>
 
             </li>
 
-            <li class="service-item">
+            <!--<li class="service-item">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
@@ -292,11 +302,11 @@
                 <h4 class="h4 service-item-title">Photography</h4>
 
                 <p class="service-item-text">
-                  I like to take photos in my free time and my travels.
+                  I like to take photos in my free time and in my travels.
                 </p>
               </div>
 
-            </li>
+            </li>-->
 
           </ul>
 
@@ -309,9 +319,9 @@
 
         <section class="testimonials">
 
-          <h3 class="h3 testimonials-title">Testimonials</h3>
+          <h3 class="h3 testimonials-title" style = "text-align: center"><a href="./assets/images/resume_official_fr.pdf" style="color: white"><u>Download My Resume!</u></a></h3>
 
-          <ul class="testimonials-list has-scrollbar">
+          <!--<ul class="testimonials-list has-scrollbar">
 
             <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
@@ -401,7 +411,7 @@
               </div>
             </li>
 
-          </ul>
+          </ul>-->
 
         </section>
 
@@ -453,7 +463,7 @@
 
         <!--
           - clients
-        -->
+        
 
         <section class="clients">
 
@@ -499,7 +509,7 @@
 
           </ul>
 
-        </section>
+        </section>-->
 
       </article>
 
@@ -711,8 +721,11 @@
         </header>
 
         <section class="projects">
+          <p style="color:white">
+            Coming Soon!
+          </p>
 
-          <ul class="filter-list">
+          <!--<ul class="filter-list">
 
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
@@ -730,7 +743,7 @@
               <button data-filter-btn>Web development</button>
             </li>
 
-          </ul>
+          </ul>-->
 
           <div class="filter-select-box">
 
@@ -766,7 +779,7 @@
 
           </div>
 
-          <ul class="project-list">
+          <!--<ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
@@ -930,7 +943,7 @@
               </a>
             </li>
 
-          </ul>
+          </ul>-->
 
         </section>
 
@@ -1162,9 +1175,11 @@
 
             <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
 
-            <button class="form-btn" type="submit" disabled data-form-btn>
+            <button class="form-btn" type="submit" data-form-btn>
+              <a href="mailto:vparra2001@gmail.com?subject=subject text">
               <ion-icon name="paper-plane"></ion-icon>
               <span>Send Message</span>
+            </a>
             </button>
 
           </form>
